crates/rargs/tests/snapshots/test_scripts__stdout flags.sh -no-s.snap
---
source: crates/rargs/tests/test_scripts.rs
description: "[stdout] flags.sh -no-s"
expression: "String::from_utf8(match \"stdout\" {\n            \"stdout\" => output.stdout,\n            \"stderr\" => output.stderr,\n            _ => panic!(\"invalid stream\"),\n        }).unwrap_or_else(|e|\n        panic!(\"failed to execute the '{dst}' script with error: {e}\"))"
---
falsy == false
truthy == 1
shorty == false
